# nun-db

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  LeaderlessReplication.md  Makefile  README.md  docker-compose.yml  freiardb.data  replication-diagram.md  todo.md  user-management.md
.github/workflows/: dockerimage.yml  rust.yml
benches/: nundb_benchmark.rs  nundb_benchmark.rs-old  nundb_disk_benchmark.rs
src/: main.rs
src/lib/: bo.rs  commands.rs  configuration.rs  consensus_ops.rs  core.rs  db_ops.rs  disk_ops.rs  election_ops.rs  http_ops.rs  lib.rs  mod.rs  monitoring.rs  parse_request.rs  process_request.rs  replication_ops.rs  security.rs  tcp_ops.rs  ws_ops.rs
src/lib/client/: client.rs
src/lib/commad_line/: commands.rs
src/lib/network/: http_ops.rs  mod.rs  tcp_ops.rs  ws_ops.rs
src/lib/storage/: common.rs  disk.rs  hasher.rs  mod.rs  s3.rs  s3_partition.rs
tests/: LoadTest.jmx  add-values-no-snapshot.in  add-values.in  commons.sh  consensus-tests.rs  create-lots-of-dbs.sh  createdb.sh  election-tests.rs  get-cluster-state.in  helpers.rs  metrics-state-tests.rs  metrics-state.rs  replication-tests.rs  set-safe-tests.rs  snapshot.admin.in  snapshot.sh  test-deadlock-when-snapshotting-under-heavy-load.sh  test-fail-invalid-op-log-dbs.sh  test-fail-primary-dbs.sh  test-http.sh  test-replication-dbs.sh  test-replication-primary-dbs.sh  test-replication-write-dbs.sh  test.rs  ws-tests.rs
tests/k6/: ws.js
tests/sh/: Makefile  commons.sh  create-samples.in  debug.sh  organize.sh  run-all.sh  start-cluster-dbs.sh  test-deadlock-when-snapshotting-under-heavy-load.sh  test-fail-primary-dbs.sh  test.rs
