[package]

name = "nun-db"
version = "0.0.1"
authors = [ "Mateus Freira <mateus.freira@gmail.com>" ]
edition = "2018"

[dependencies]
tokio = "1.19.2"
futures = "0.3.1"
ws = "*"
env_logger = "*"
log = { version = "0.4.8", features = ["std"] }
rustc-serialize = "*"
bincode = "*"
serde = "*"
timer = "*"
chrono = "*"
thread-id = "*"
tiny_http = "*"
clap = "2.34.0"
reqwest = { version="*" , features = ["blocking"]}
signal-hook = "0.3.9"
atomic_float = "0.1.0"
lazy_static = "1.4.0"
once_cell = "1.17.1"

[dev-dependencies]
tokio-test = "*"
assert_cmd = "0.10"
predicates = "1"
