[package]

name = "nun-db"
version = "0.0.1"
authors = [ "Mateus Freira <mateus.freira@gmail.com>" ]
edition = "2018"

[lib]
name = "nundb"
path = "src/lib/lib.rs"

[[bin]]
name = "nun-db"
path = "src/bin/main.rs"

[dependencies]
tokio = "1.19.2"
futures = "0.3.1"
ws = "*"
env_logger = "*"
log = { version = "=0.4.20", features = ["std"] }
rustc-serialize = "*"
bincode = "*"
serde = "*"
timer = "*"
chrono = "*"
thread-id = "*"
tiny_http = "*"
clap = "2.34.0"
reqwest = { version="*" , features = ["blocking"]}
signal-hook = "0.3.9"
atomic_float = "0.1.0"
lazy_static = "1.4.0"
async-std = "1.12.0"

[dev-dependencies]
tokio-test = "*"
assert_cmd = "0.10"
predicates = "1"
criterion = { version = "0.4", features = ["html_reports"] }


[[bench]]
name = "nundb_benchmark"
harness = false


