[package]

name = "nun-db"
version = "0.0.1"
authors = [ "Mateus Freira <mateus.freira@gmail.com>" ]
edition = "2018"

[lib]
name = "nundb"
path = "src/lib/lib.rs"

[[bin]]
name = "nun-db"
path = "src/bin/main.rs"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.1.7", features = ["behavior-version-latest"] }
tokio = { version = "1.19.2", features = ["full"] }
bytes = "1"
futures = "0.3.1"
ws = "0.9.2"
env_logger = "0.11.7"
log = { version = "=0.4.26", features = ["std"] }
timer = "0.2.0"
chrono = "0.4.40"
thread-id = "5.0.0"
tiny_http = "0.12.0"
clap = "2.34.0"
reqwest = { version="0.12.14" , features = ["blocking"]}
signal-hook = "0.3.9"
atomic_float = "0.1.0"
lazy_static = "1.4.0"
async-std = "1.12.0"
bincode = "1.3.3"

[dev-dependencies]
tokio-test = "0.4.4"
assert_cmd = "0.10"
predicates = "1"
criterion = { version = "0.4", features = ["html_reports"] }


[[bench]]
name = "nundb_disk_benchmark"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }

